# bch-tx-editor

./: .gitignore  Cargo.toml  README.md  Trunk.toml  bch-tx-editor-25c3b94e1615177a.js  bch-tx-editor-25c3b94e1615177a_bg.wasm  bch-tx-editor-32a3d525deb41ed6.js  bch-tx-editor-32a3d525deb41ed6_bg.wasm  bch-tx-editor-38538b61c9294a6.js  bch-tx-editor-38538b61c9294a6_bg.wasm  bch-tx-editor-47bb5c43cd290cc8.js  bch-tx-editor-47bb5c43cd290cc8_bg.wasm  bch-tx-editor-4a8872a5085861e9.js  bch-tx-editor-4a8872a5085861e9_bg.wasm  bch-tx-editor-4d8abd679c6719c4.js  bch-tx-editor-4d8abd679c6719c4_bg.wasm  bch-tx-editor-85db17add49e2e51.js  bch-tx-editor-85db17add49e2e51_bg.wasm  bch-tx-editor-8dc79565b5b3a42e.js  bch-tx-editor-8dc79565b5b3a42e_bg.wasm  bch-tx-editor-d87a3dd2decd4d5.js  bch-tx-editor-d87a3dd2decd4d5_bg.wasm  bch-tx-editor-e813e4787414b1cb.js  bch-tx-editor-e813e4787414b1cb_bg.wasm  bch-tx-editor-f1779c0520a8f0c1.js  bch-tx-editor-f1779c0520a8f0c1_bg.wasm  index.html  rust-toolchain.toml  tailwind-46e50713229645d.css  tailwind-639c1f609ae83aa6.css  tailwind-9428294ec2297679.css  tailwind-dc509a69884befe0.css  tailwind-ec7482812205f35f.css  tailwind-ed5a547b4bc474ed.css  tailwind.config.js
.github/workflows/: deploy.yml
js-reexport/: index.js  package-lock.json  package.json
src/: electrum_client.rs  js_reexport.rs  leptos_drag_reorder.rs  macros.rs  main.rs  partially_signed.rs  tailwind.css  util.rs
src/components/: drag_handle.rs  mod.rs  script_input.rs  token_data.rs  tracker.rs  tx_input.rs  tx_output.rs
