[package]
name = "tx-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincash = { version = "0.29.2", features = ["rand"] }
cashaddr = { version = "=0.2.0", features = ["convert"] }
getrandom = { version = "0.2.10", features = ["js"] }
gloo = { version = "0.10.0", features = ["timers", "futures"] }
jsonrpsee = { version = "0.20.0", features = ["wasm-client", "client-web-transport"] }
leptos = { version = "0.5.0-beta", features = ["nightly", "csr"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tokio-util = "0.7.8"
wasm-bindgen = "0.2.87"
bitcoincash-addr = { path = "../rust-bitcoincash-addr" }
