[package]
name = "bch-tx-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincash = { version = "0.29.2", features = ["rand"] }
cashaddr = "0.2.0"
getrandom = { version = "0.2.10", features = ["js"] }
gloo = { version = "0.11.0", features = ["timers", "futures"] }
jsonrpsee = { version = "0.22.0", features = ["wasm-client", "client-web-transport"] }
leptos = { version = "0.6.0", features = ["nightly", "csr"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tokio-util = "0.7.8"
wasm-bindgen = "0.2.87"
anyhow = "1.0.75"
console_error_panic_hook = "0.1.7"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = "symbols"
opt-level = "s"
