[workspace]
members = ["tools/cargo-bin"]

[package]
name = "bch-tx-editor"
version = "0.1.0"
edition = "2021"

[package.metadata.bin]
trunk = { version = "0.22.0-beta.1", git = "https://github.com/trunk-rs/trunk", rev = "1705946833dd1bc60c1ff36517dd8f443f84b991" }

[dependencies]
bitcoincash = { version = "0.29.2", features = ["rand"] }
cashaddr = "0.2.0"
gloo = { version = "0.12.0", features = ["timers", "futures"] }
jsonrpsee = { version = "0.26.0", features = ["wasm-client", "client-web-transport"] }
leptos = { version = "0.8.0", features = ["nightly", "csr"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tokio-util = "0.7.8"
wasm-bindgen = "0.2.87"
anyhow = "1.0.75"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.70", features = ["DataTransfer", "Document", "DomRect", "Element", "NodeList"] }

[build-dependencies]
cc = "1.2.0"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
